# trainyeild

./: Cargo.toml  README.md  settings.lua
assert/: archlinux.txt
cliprint/: Cargo.toml
cliprint/assert/: example.txt
cliprint/examples/: simple.rs
cliprint/src/: elements.rs  lib.rs
examples/: simple.rs
marinefetch/: Cargo.toml
marinefetch/assert/: archlinux.txt
marinefetch/src/: main.rs  waylandinfos.rs
marinfetch/: Cargo.toml
marinfetch/src/: main.rs
src/: elements.rs  layout.rs  lib.rs  main.rs  matrix.rs
