[package]
name = "cliprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strfmt = "0.2.4"
nu-ansi-term = { version = "0.48.0", optional = true }

[features]
color = ["nu-ansi-term"]

[dev-dependencies]
nu-ansi-term = "0.48.0"

[[example]]
name = "simple"
required-features = ["color"]
