cargo-features = ["edition2024"]

[package]
name = "cliprint"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "a crate to generate the cli output"
authors = ["Decodertalkers <aakari@tutanota.com>"]
keywords = ["cli", "fetch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strfmt = "0.2.4"
nu-ansi-term = { version = "0.50.0", optional = true }

[features]
color = ["dep:nu-ansi-term"]
nightly = []

[dev-dependencies]
nu-ansi-term = "0.50.0"

[[example]]
name = "simple"
required-features = ["color", "nightly"]
