[package]
name = "marinefetch"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "a tool to fetch your computer"
authors = ["Decodertalkers <aakari@tutanota.com>"]
keywords = ["cli", "fetch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliprint = { path = "../cliprint", version = "0.1.0", features = ["color"] }
users = "0.11.0"
zbus = "3.11.0"
nu-ansi-term = "0.48.0"
wayland-client = "0.30"
sctk = { version = "0.17.0", package = "smithay-client-toolkit" }
