[package]
name = "marinfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliprint = { path = "../cliprint", features = ["color"] }
tokio = { version = "1.26.0", features = ["full"] }
users = "0.11.0"
zbus = { version = "3.11.0", default-features = false, features = ["tokio"] }
nu-ansi-term = "0.48.0"
